fix overflow-x

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -64,6 +64,7 @@ html {
 .trans--slideLeft {
   height: 100vh;
   width: 200vw;
+  overflow-x: hidden;
   clip-path: polygon(50% 0%, 100% 0, 100% 100%, 0 100%);
   transform: translateX(100%);
   position: absolute;
