--- a/react-ui/src/sass/base/_animations.scss
+++ b/react-ui/src/sass/base/_animations.scss
@@ -36,6 +36,7 @@
 .trans--slideLeft {
   height: 100vh;
   width: 200vw;
+  overflow-x: hidden;
   clip-path: polygon(50% 0%, 100% 0, 100% 100%, 0 100%);
   transform: translateX(100%);
   position: absolute;
